fix(dropdown): suggest
Refactor dropdown menu handling (scrolling/positioning). If the user scrolls, the dropdown menu should be closed. The dropdown menu is now scrollable if it is too big for the screen. The reference element must always be visible (important for filtering and tc:suggests).

* Autocomplete replaced with own implementation
* adjust tests

Issue: TOBAGO-2400

--- a/tobago-theme/src/main/scss/_tobago.scss
+++ b/tobago-theme/src/main/scss/_tobago.scss
@@ -385,6 +385,12 @@ $icon-sort-numbers: (
   }
 }
 
+@mixin suggestDropdownMenu() {
+  > .tobago-dropdown-menu {
+    @include tobagoDropdownMenuValues();
+  }
+}
+
 @mixin tobagoDropdownMenuValues() { // use this mixin inside every .tobago-dropdown-menu class
   /* Use .tobago-dropdown-menu instead of .dropdown-menu to prevent Bootstrap from creating a dropdown instance.
      This leads to javascript error if arrow up/down is pressed. */
@@ -808,7 +814,6 @@ tobago-image {
   }
 }
 
-/* in ----------------------------------------------------------- */
 tobago-in {
   display: block;
 
@@ -840,16 +845,22 @@ tobago-in {
     }
   }
 
-  &.autocomplete[data-loading=true] .autocomplete-pseudo-container {
+  .spinner {
+    display: none;
     position: absolute;
+
+    &.tobago-show {
+      display: block;
+    }
 
     &:after {
       content: "";
       border: 3px solid rgba(0, 0, 0, .12);
       border-right-color: rgba(0, 0, 0, .48);
       border-radius: 100%;
-      width: 20px;
-      height: 20px;
+      width: 100%;
+      height: 100%;
+      top: 50%;
       position: absolute;
       z-index: 5;
       transform: translateY(-50%);
@@ -857,8 +868,8 @@ tobago-in {
     }
   }
 
-  .autocomplete-result-list {
-    cursor: pointer;
+  .tobago-dropdown-menu-anchor {
+    @include suggestDropdownMenu();
   }
 
   tobago-suggest {
@@ -1126,6 +1137,7 @@ tobago-page {
   .tobago-page-menuStore {
     @include buttonDropdownMenu();
     @include selectListOptions();
+    @include suggestDropdownMenu();
 
     position: fixed;
     top: 0;
